alert of all success response done

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,5 @@
+<!-- Admin Panel total counts of events,users,collections,logistics,commission -->
+
 <div class="container">
     <div class="row m-auto pt-5">
         <div class="col-md-4 col-sm-6">
@@ -39,41 +41,41 @@
     </div>
 
     <div class="row m-auto pt-5">
-            <div class="col-md-4 col-sm-6">
-                <div class="progress blue">
-                    <span class="progress-left">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value"></div>
-                </div>
-                <label class="text-center">Total Amount Collected</label>
+        <div class="col-md-4 col-sm-6">
+            <div class="progress blue">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value"></div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="progress blue">
-                    <span class="progress-left">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value"></div>
-                </div>
-                <label class="text-center">Total Amount (Logistics)</label>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="progress blue">
-                    <span class="progress-left">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value"></div>
-                </div>
-                <label class="text-center">Total Amount (Commission)</label>
-            </div>
+            <label class="text-center">Total Amount Collected</label>
         </div>
+        <div class="col-md-4 col-sm-6">
+            <div class="progress blue">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value"></div>
+            </div>
+            <label class="text-center">Total Amount (Logistics)</label>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <div class="progress blue">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value"></div>
+            </div>
+            <label class="text-center">Total Amount (Commission)</label>
+        </div>
+    </div>
 </div>
