--- a/src/app/guest-event/guest-event.component.html
+++ b/src/app/guest-event/guest-event.component.html
@@ -1,15 +1,18 @@
-<div class="container" *ngIf="!guestEventDetailsAfterLogin" >
+<div class="container" *ngIf="!guestEventDetailsAfterLogin">
     <div class="row">
         <div class="col-12">
             <div class="card">
-                    <button type="button" class="btn btn-primary" (click)="joinNow(EventDetails._id)" *ngIf="!isGuestJoined">Join Now
-                        </button>
-                        <button type="button" class="btn btn-primary" (click)="viewMoreDeatils(EventDetails._id)" *ngIf="isGuestJoined">View More
-                        </button>
+                <button type="button" class="btn btn-primary" (click)="joinNow(EventDetails._id)"
+                    *ngIf="!isGuestJoined">Join Now
+                </button>
+                <button type="button" class="btn btn-primary" (click)="viewMoreDeatils(EventDetails._id)"
+                    *ngIf="isGuestJoined">View More
+                </button>
                 <div [ngStyle]="{background: getSrc(EventDetails.eventTheme)}" class="theme-background">
                     <div class="row">
                         <div class="col-4 m-auto">
-                            <img *ngIf="EventDetails && EventDetails.profilePhoto" src="{{path}}{{EventDetails.profilePhoto}}" class="rounded-circle img-fluid">
+                            <img *ngIf="EventDetails && EventDetails.profilePhoto"
+                                src="{{path}}{{EventDetails.profilePhoto}}" class="rounded-circle img-fluid">
                         </div>
                     </div>
                     <div class="row">
@@ -35,18 +38,19 @@
     </div>
 </div>
 
-
-
 <div class="container" *ngIf="guestEventDetailsAfterLogin">
     <div class="row">
         <div class="col-12">
-            <div class="card" >
-                    <button type="button" class="btn btn-primary" (click)="joinNowAfterLogin(guestEventDetailsAfterLogin._id)">Join Now
-                        </button>
+            <div class="card">
+                <button type="button" class="btn btn-primary"
+                    (click)="joinNowAfterLogin(guestEventDetailsAfterLogin._id)">Join Now
+                </button>
                 <div [ngStyle]="{background: getSrc(guestEventDetailsAfterLogin.eventTheme)}" class="theme-background">
                     <div class="row">
                         <div class="col-4 m-auto">
-                            <img *ngIf="guestEventDetailsAfterLogin && guestEventDetailsAfterLogin.profilePhoto" src="{{path}}{{guestEventDetailsAfterLogin.profilePhoto}}" class="rounded-circle img-fluid">
+                            <img *ngIf="guestEventDetailsAfterLogin && guestEventDetailsAfterLogin.profilePhoto"
+                                src="{{path}}{{guestEventDetailsAfterLogin.profilePhoto}}"
+                                class="rounded-circle img-fluid">
                         </div>
                     </div>
                     <div class="row">
