--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,41 +1,40 @@
+<!-- Users header section -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="adminUser == 'user'">
   <!-- <a class="navbar-brand" href="#">Navbar</a> -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="createEvent">Create Event</a>
+        <a class="nav-link" routerLink="createEvent" *ngIf="currentUser">Create Event</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="myEvent">MyEvent</a>
+        <a class="nav-link" routerLink="myEvent" *ngIf="currentUser">MyEvent</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Add Bank Account</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="reset-password">Reset password</a>
+        <a class="nav-link" routerLink="reset-password" *ngIf="currentUser">Reset password</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="logout()">Logout</a>
+        <a class="nav-link" href="#" (click)="logout()" *ngIf="currentUser">Logout</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <input type="text" id="exampleForm2" class="form-control" [(ngModel)]="searchText" (keyup)="onKey(searchText)"
+      autocomplete="off">
+    <label for="exampleForm2" style="padding-left: 15px;">Search Here</label>
   </div>
 </nav>
 
 
-
-<!-- Admin Panel -->
+<!-- Admin Panel header section -->
 
 
 <div class="header" *ngIf="adminUser == 'admin'">
