--- a/src/app/admin-event-details/admin-event-details.component.html
+++ b/src/app/admin-event-details/admin-event-details.component.html
@@ -1,3 +1,5 @@
+<!-- Admin panel display event details with guestList,total no of payment done by guest,which items sold groupwise -->
+
 <div class="row">
     <div class="col-12">
         <div>
