--- a/src/app/admin-user-list/admin-user-list.component.html
+++ b/src/app/admin-user-list/admin-user-list.component.html
@@ -1,3 +1,5 @@
+<!-- Admin panel all list of users -->
+
 <div class="container">
     <h1 class="text-center">User List </h1>
     <table class="table">
