--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,19 +6,23 @@
     <span></span>
     <span></span>
 </div>
+
+<!-- Form of login user  -->
+
 <div *ngIf="!isDiable">
     <div class="row">
         <div class="col-md-4 m-auto pt-5">
             <div class="card p-5">
                 <form [formGroup]="loginForm" autocomplete="off">
-                        <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email"class="form-control" formControlName="email" [ngClass]="{ 'is-invalid': f.email.touched && f.email.errors }">
-                                <div class="col-md-2" *ngIf="f.email.touched && f.email.errors" class="invalid-feedback">
-                                    <div *ngIf="f.email.errors.required">Email is required</div>
-                                    <div *ngIf="f.email.errors.email">Please enter valid Email</div>
-                                </div>
-                            </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" class="form-control" formControlName="email"
+                            [ngClass]="{ 'is-invalid': f.email.touched && f.email.errors }">
+                        <div class="col-md-2" *ngIf="f.email.touched && f.email.errors" class="invalid-feedback">
+                            <div *ngIf="f.email.errors.required">Email is required</div>
+                            <div *ngIf="f.email.errors.email">Please enter valid Email</div>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="pwd">Password:</label>
                         <input type="password" class="form-control" formControlName="password">
@@ -26,14 +30,16 @@
 
                     <div class="text-center">
                         <button type="submit" (click)="onSubmitLogin()" class="btn btn-primary w-100"
-                        [disabled] = "isDisable || loginForm.invalid">Submit</button>
+                            [disabled]="isDisable || loginForm.invalid">Submit</button>
                     </div>
                     <div class="row p-3">
                         <div class="col-md-6">
-                            <button type="button" (click)="signInWithGoogleAccount()" class="btn btn-primary w-100" [disabled]="isDisable">SignIn with Google</button>
+                            <button type="button" (click)="signInWithGoogleAccount()" class="btn btn-primary w-100"
+                                [disabled]="isDisable">SignIn with Google</button>
                         </div>
                         <div class="col-md-6">
-                            <button type="button" class="btn btn-primary w-100" (click)="submitLogin();" [disabled]="isDisable">Login with facebook</button>
+                            <button type="button" class="btn btn-primary w-100" (click)="submitLogin();"
+                                [disabled]="isDisable">Login with facebook</button>
                         </div>
                     </div>
                     <a href="" class="float-left" data-toggle="modal" data-target="#exampleModal">forgot password?</a>
