--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -5,6 +5,8 @@
     <span></span>
     <span></span>
 </div>
+<!-- Form of reset password  -->
+
 <div *ngIf="!isDiable">
     <div class="row">
         <div class="col-md-6 m-auto pt-5">
