--- a/src/app/thank-you-message/thank-you-message.component.html
+++ b/src/app/thank-you-message/thank-you-message.component.html
@@ -1,3 +1,5 @@
+<!-- Thank you message with normal form field -->
+
 <!-- <div class="container m-auto p-4">
     <div class="row">
         <div class="col-6">
@@ -25,15 +27,17 @@
     </div>
 </div> -->
 
-<form [formGroup]= "thankyouMessageForm">
+<!-- Thank you message with use of editor -->
+
+<form [formGroup]="thankyouMessageForm">
     <div>
         <ckeditor class="ckeditor" [editor]="Editor" formControlName="message" (ready)="onReady($event)"></ckeditor>
     </div>
     <div class="custom-file">
-            <input type="file" #attachment formControlName="attachment" class="form-control"
-                (change)="addFile($event.target.files)" id="customFile"
-                accept="image/png, image/jpeg, image/jpg, image/gif" hidden>
-            <label class="custom-file-label" for="customFile">Choose file</label>
-        </div>
-    <button type="button" class="btn btn-primary"(click)="thankyouMessage()">Submit</button>
+        <input type="file" #attachment formControlName="attachment" class="form-control"
+            (change)="addFile($event.target.files)" id="customFile" accept="image/png, image/jpeg, image/jpg, image/gif"
+            hidden>
+        <label class="custom-file-label" for="customFile">Choose file</label>
+    </div>
+    <button type="button" class="btn btn-primary" (click)="thankyouMessage()">Submit</button>
 </form>
