--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -1,3 +1,5 @@
+<!-- Details of any particular event  -->
+
 <div class="row">
     <div class="col-12">
         <div *ngFor="let item of allDetailsofEvent">
@@ -38,10 +40,7 @@
                                     <div class="col-12">
                                         <p>EventLink:-
                                             <input #inputTarget [(ngModel)]="eventLink" readonly />
-                                            <button [ngxClipboard]="inputTarget" >Copy</button>
-                                            <!-- <button (cbOnSuccess)="isCopied = true" [cbContent]="'eventLink'">Copied</button> -->
-
-                                            <!-- <button (cbOnSuccess)="isCopied = true" [cbContent]="'example string'">Copied</button> -->
+                                            <button [ngxClipboard]="inputTarget">Copy</button>
                                         </p>
                                     </div>
                                 </div>
@@ -64,7 +63,7 @@
                                                                 <div class="col-lg-6">
                                                                     <button type="button" class="btn btn-info"
                                                                         (click)="addToCart(group._id, activity.activityId, item._id, group.male,'male')"
-                                                                        [disabled]="isDisable"
+                                                                        [disabled]="isDisable" 
                                                                         *ngIf="isCelebrant == 'false'">Add
                                                                         To Cart </button>
                                                                 </div>
