hotmail login done

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,6 +45,11 @@
                     <a href="" class="float-left" data-toggle="modal" data-target="#exampleModal">forgot password?</a>
                     <a routerLink="/signUp" class="float-right">SignUp?</a>
                 </form>
+                <div>
+                    <button (click)="login()" >Log In</button>
+                    <button (click)="Login()">Sign in with Microsoft</button>
+
+                </div>
             </div>
         </div>
     </div>
