--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -267,7 +267,7 @@
 
                                     <div class="add_row" *ngIf="groupForm.controls.group.controls.length>0">
                                         <button type="button" class="btn float-right btn-primary"
-                                            (click)="createdEventDetails ? AddGroupField(eventActivities[i].activityId, i) : AddGroupField(createdActivity[i].activityId, i)"><span
+                                            (click)="createdEventDetails ? AddGroupField(eventActivities[i].activityId, i) : AddGroupField(createdActivity[i]._id, i)"><span
                                                 class="fa fa-plus"></span> Add</button>
                                     </div>
                                 </div>
