--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -47,7 +47,7 @@
                 </form>
                 <div>
                     <button (click)="login()" >Log In</button>
-                    <button (click)="Login()">Sign in with Microsoft</button>
+                    <button (click)="signIn()">Sign in with Microsoft</button>
 
                 </div>
             </div>
@@ -84,3 +84,4 @@
         </div>
     </div>
 </div>
+
