comment code and remove unneccessary dependencies

--- a/src/app/guest-event/guest-event.component.html
+++ b/src/app/guest-event/guest-event.component.html
@@ -1,3 +1,5 @@
+<!-- Event details for guest which invited by celebrants -->
+
 <div class="container" *ngIf="!guestEventDetailsAfterLogin">
     <div class="row">
         <div class="col-12">
