--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,3 +1,5 @@
+<!-- Loader for all websites -->
+
 <div class="loader">
-        <div class="spinner"></div>
-      </div>
+  <div class="spinner"></div>
+</div>
