--- a/src/app/thank-you-message/thank-you-message.component.html
+++ b/src/app/thank-you-message/thank-you-message.component.html
@@ -1,6 +1,6 @@
 <!-- Thank you message with normal form field -->
 
-<!-- <div class="container m-auto p-4">
+<div class="container m-auto p-4">
     <div class="row">
         <div class="col-6">
             <div class="card p-2">
@@ -25,11 +25,11 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
 
 <!-- Thank you message with use of editor -->
 
-<form [formGroup]="thankyouMessageForm">
+<!-- <form [formGroup]="thankyouMessageForm">
     <div>
         <ckeditor class="ckeditor" [editor]="Editor" formControlName="message" (ready)="onReady($event)"></ckeditor>
     </div>
@@ -40,4 +40,4 @@
         <label class="custom-file-label" for="customFile">Choose file</label>
     </div>
     <button type="button" class="btn btn-primary" (click)="thankyouMessage()">Submit</button>
-</form>
+</form> -->
