--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -4,9 +4,9 @@
     <div class="col-12">
         <div *ngFor="let item of allDetailsofEvent">
             <button type="button" class="btn btn-primary m-auto" (click)="editEventDeatils(item._id)"
-                >Edit Event </button>
+                *ngIf="isCelebrant">Edit Event </button>
             <button type="button" class="btn btn-primary m-auto " (click)="deleteEvent(item._id)"
-                >Delete Event </button>
+                *ngIf="isCelebrant">Delete Event </button>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -63,7 +63,7 @@
                                                                 <div class="col-lg-6">
                                                                     <button type="button" class="btn btn-info"
                                                                         (click)="addToCart(group._id, activity.activityId, item._id, group.male,'male')"
-                                                                        [disabled]="isDisable" 
+                                                                        [disabled]="isDisable"
                                                                         *ngIf="isCelebrant == 'false'">Add
                                                                         To Cart </button>
                                                                 </div>
